--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,36 @@
-# The directory Mix will write compiled artifacts to.
+
+# Created by https://www.gitignore.io/api/elixir,vim,linux
+
+### Elixir ###
 /_build
-
-# If you run "mix test --cover", coverage assets end up here.
 /cover
-
-# The directory Mix downloads your dependencies sources to.
 /deps
-
-# Where 3rd-party dependencies like ExDoc output generated docs.
 /doc
-
-# If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
-
-# Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+
+
+### Vim ###
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
+
+
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
